# src/modules/coupons/coupon.routes.js
@@ -1,8 +1,9 @@
 import express from "express";
-import { createCoupon, updateCoupon } from "./coupon.controller.js";
+import { createCoupon, updateCoupon,deleteCoupon } from "./coupon.controller.js";
 const router = express.Router();
 
-router.post("/", createCoupon);
-router.put("/:id", updateCoupon);
-
+import checkPermission from "../../middlewares/checkPermission.js";
+router.post("/", checkPermission.verifyToken,checkPermission.isAdmin,createCoupon);
+router.put("/:id", checkPermission.verifyToken,checkPermission.isAdmin,updateCoupon);
+router.delete("/:id", checkPermission.verifyToken, checkPermission.isAdmin, deleteCoupon);
 export default router;
